<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
            android:id="@+id/action_english"
            android:title="@string/action_english"
            android:orderInCategory="100"
            android:showAsAction="never"
            tools:ignore="AppCompatResource">
    </item>

    <item
            android:id="@+id/action_russian"
            android:title="@string/action_russian"
            android:orderInCategory="100"
            android:showAsAction="never"
            tools:ignore="AppCompatResource">
    </item>

    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            android:orderInCategory="100"
            android:showAsAction="never"
            tools:ignore="AppCompatResource">
    </item>

</menu>
