<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

        <IconicsTextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/text_black">
        </IconicsTextView>
    </android.support.v7.widget.Toolbar>

    <IconicsTextView
            android:id="@+id/tv_info_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/username_layout"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_info_user"
            android:textSize="16sp"
            android:textColor="@color/text_black">
    </IconicsTextView>
    
    <com.stenbergroom.githubreader.app.util.UsernameField
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

        <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_user_field_hint"
                android:textColorHint="@color/text"
                android:textColor="@color/text_black"
                android:textSize="16sp">
        </EditText>
    </com.stenbergroom.githubreader.app.util.UsernameField>

    <IconicsButton
            android:id="@+id/btn_tell_me_more"
            android:layout_below="@+id/username_layout"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_tell_me_more"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:background="@drawable/ripple">
    </IconicsButton>

</RelativeLayout>
